[tool.poetry]
name = "multifutures"
version = "0.3.0"
description = ""
authors = ["Panos Mavrogiorgos <pmav99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
exceptiongroup = "*"
limits = "*"
tqdm = "*"
loky = {version = "*", optional = true}
psutil = {version = "*", optional = true}

[tool.poetry.extras]
full = ["loky", "psutil"]

[tool.poetry.group.dev.dependencies]
ipdb = "*"
loky = "*"
mypy = "*"
psutil = "*"
pytest = "*"
pytest-cov = "*"
types-tqdm = "*"

[tool.poetry.group.docs.dependencies]
mkdocs = "*"
mkdocs-material = "*"
mkdocstrings = "*"
mkdocstrings-python = "*"
pymdown-extensions = "*"
black = "*"
mkdocs-gen-files = "*"
mike = "*"

[tool.poetry-dynamic-versioning]
enable = true
dirty = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-ra", "--verbose", "--showlocals", "--tb=short", "--strict-markers", "--strict-config"]
xfail_strict = true
log_cli = true
log_cli_level = "info"
testpaths = [
  "tests",
]
filterwarnings = [
    "error",
    'ignore:distutils Version classes are deprecated. Use packaging.version instead:DeprecationWarning',
    'ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning',
]


[tool.mypy]
python_version = "3.9"
plugins = []
show_column_numbers = true
show_error_context = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
strict = true
ignore_missing_imports = true
disable_error_code = [ ]
enable_error_code = [
  "comparison-overlap",
  "explicit-override",
  "ignore-without-code",
  "no-any-return",
  "no-any-unimported",
  "no-untyped-call",
  "no-untyped-def",
  "possibly-undefined",
  "redundant-cast",
  "redundant-expr",
  "redundant-self",
  "truthy-bool",
  "truthy-iterable",
  "type-arg",
  "unimported-reveal",
  "unreachable",
  "unused-ignore",
]

# mypy per-module options:
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.black]
target-version = ["py39"]
line-length = 120

[tool.ruff]
target-version = "py39"
line-length = 120
lint.select = [
  "ARG",  # flake8-unused-argument
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "C90",  # mccabe
  "COM",  # flake8-commas
  # "D",  # pydocstyle
  "DTZ",  # flake8-datetimez
  "E",  # pycodestyle
  "EXE",  # flake8-executable
  "FA",  # flake8-future-annotations
  "FBT",  # flake8-boolean-trap
  "F",  # pyflakes
  "ICN",  # flake8-import-conventions
  # "I",  # isort
  "ISC",  # flake8-implicit-str-concat
  "N",  # pep8-naming
  "PL",  # Pylint
  "Q",  # flake8-quotes
  "RUF",  # Unused noqa
  "S",  # flake8-bandit
  "TID",  # flake8-tidy-imports
  "T",  # pyupgrade
  "T10",  # flake8-debugger
  "UP",  # pyupgrade
  "W",  # Warning
  "YTT",  # flake8-2020
]
lint.ignore = [
  "N812",  # lowercase-imported-as-non-lowercase
  "PLR0913",  # too-many-arguments
  "S101",  # assert
  "F401",  # Unused imports; Let pyright report this
]
lint.unfixable = [
  "F401",  # Don't touch unused imports
]


# [tool.coverage.run]
# branch = true
# source = ["multifutures"]
# omit = [
#   "__main__.py",
#   "setup.py",
# ]
# concurrency = [
#   "multiprocessing",
#   "thread",
# ]
# parallel = true
# sigterm = true
#
# [tool.coverage.report]
# show_missing = true
# skip_covered = true
# fail_under = 99.0
# exclude_lines = [
#     'pragma: no cover',
#     'raise AssertionError',
#     'raise NotImplementedError',
#     'return NotImplemented',
#     'if False:',
#     'if TYPE_CHECKING:',
#     'if typing.TYPE_CHECKING:',
#     '@overload',
#     '@typing.overload',
#     '\(Protocol\):$',
#     'typing.assert_never',
#     'assert_never',
# ]

[tool.codespell]
skip = '*.po,*.ts,*.lock'
